[tool.poetry]
name = "vrep-gym"
version = "0.1.0"
description = ""
authors = ["Anand Balakrishnan <anandbala1597@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
gym = "^0.11.0"
msgpack = "^0.6.1"
numpy = "^1.16"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
