[tool.poetry]
name = "vrep-gym"
version = "0.1.0"
description = "A OpenAI Gym-compatible environment for V-REP simulator using its B0 remote API"
authors = ["Anand Balakrishnan <anandbal@usc.edu>"]

packages = [
    { include = "vrep_gym", from = "src" },
]

build = "build.py"

[tool.poetry.dependencies]
python = "^3.6"
gym = "^0.11.0"
msgpack = "^0.6.1"
numpy = "^1.16"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.2"
autopep8 = "^1.4"

[build-system]
requires = ["setuptools","poetry>=0.12"]
build-backend = "poetry.masonry.api"
